2014-12-14 Todd Rinaldo <toddr@cpan.org> 1.13_01
	* RT 91590 - Remove MAP_TARGET from Makefile.PL
	
2014-09-12 Todd Rinaldo <toddr@cpan.org> 1.12
	* Merge pull request from Chris Williams (bingos) to fix "redefinition of typedef" errors with v5.19.4 and above

2014-05-05 Todd Rinaldo <toddr@cpan.org>
	* Release 1.11 to CPAN with explicit dropping of support for Win32 (we never supported it) - RT 77813
	* Bump version to a devel release 1.11_01 for experimental work.
	* Fix typo in compilter - RT 75649
	* Add support for PERL_MM_OPT

2010-10-11   Todd Rinaldo <toddr@cpan.org>
	* CPAN testers clean. Bumping to release version 1.10

2010-10-04   Todd Rinaldo <toddr@cpan.org>
	* RT 60788 - Better error reporting on Operating Systems
	  that can't set a controlling terminal e.g. BeOS
	* Bump to 1.09_01

2010-10-04   Todd Rinaldo <toddr@cpan.org>
	* CPAN testers looks clean. Internal testing done on perl 5.6
	* Bump version to 1.09 and release to CPAN
	
2010-10-02   Todd Rinaldo <toddr@cpan.org>
	* RT 61642 - Fix file number test to work without hang on cygwin
	* Bump to 1.08_03

2010-09-10   Todd Rinaldo <toddr@cpan.org>
	* Update all versions to the new version. bump to 1.08_02

2010-09-10   Todd Rinaldo <toddr@cpan.org>
	* RT 45008 - only try TIOCSCTTY if we don't have a ctty
	* RT 53883 - IO::Tty detection on BeOS w/fix
	* RT 60014 - better META.yml by modernizing Makefile.PL
	* RT 44771 - Add _ to list of escape characters for compiler
	  so it'll compile on windows This is experimental pending a
	  successful dev release
	
2009-02-05   Roland Giersig  <rgiersig@cpan.org>

	* v1.08

	* Makefile.PL, Tty.xs: added support for posix_openpt(), thanks to Ed Schouten for providing a patch

2006-07-18   Roland Giersig  <rgiersig@cpan.org>

	* v1.07

	* Tty.xs: added some more letter to BSD allocation

2006-07-15   Roland Giersig  <rgiersig@cpan.org>

	* v1.06

	* Tty.pm: pre-allocate buffer for ioctl

2006-06-06   Roland Giersig  <rgiersig@cpan.org>

	* v1.05
